# auto-research

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/v1/: research.py
app/core/: citations.py  config.py  database.py  llm.py  middleware.py  settings.py
app/core/langgraph/: __init__.py  graph.py  state.py
app/core/langgraph/nodes/: __init__.py  fact_checker.py  planner.py  researcher.py  writer.py
app/core/langgraph/tools/: __init__.py  web_search.py
app/core/prompts/: __init__.py  fact_checker.md  planner.md  researcher.md  writer.md
app/models/: __init__.py  research.py
app/schemas/: evidence.py  research.py
app/services/: checkpoint.py  research_service.py
scripts/: run.ps1  run_tests.sh  start.sh
tests/: conftest.py  test_api.py  test_api_enhanced.py  test_checkpoint.py  test_database.py  test_imports.py  test_mocked_pipeline.py  test_research_service.py  test_schemas.py  test_web_search.py
tests/integration/: test_pipeline.py
tests/test_agents/: test_fact_checker.py  test_graph.py  test_planner.py  test_researcher.py  test_writer.py
