[project]
name = "autonomous-research-pipeline"
version = "0.1.0"
description = "Multi-agent research system using FastAPI, LangGraph, and PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "sqlmodel>=0.0.21,<0.1.0",
    "sqlalchemy[asyncio]>=2.0.30,<2.1.0",
    "asyncpg>=0.30.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "psycopg-pool>=3.2.0,<4.0.0",
    "langgraph>=0.2.0,<0.3.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "httpx>=0.28.0,<0.29.0",
    "tenacity>=8.5.0,<9.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "alembic>=1.14.0,<2.0.0",
    "python-multipart>=0.0.12,<1.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "pybreaker>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "ruff>=0.8.0,<1.0.0",
    "httpx>=0.28.0,<0.29.0",
    "respx>=0.23.0,<1.0.0",
    "faker>=25.0.0,<26.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501", "E722"]
fixable = ["ALL"]
unsafe-fixes = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
indent-width = 4

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/migrations/*", "*/alembic/*"]